--- a/lr-wsclient.html
+++ b/lr-wsclient.html
@@ -1,11 +1,11 @@
 <html>
 
-<head></head>
+<head>golang websocket client</head>
 
 <body>
     <script type="text/javascript">
         var sock = null;
-        var wsuri = "ws://10.16.59.178:1234";
+        var wsuri = "ws://xxx.xxx.xxx.xxx:1234";
 
         window.onload = function() {
 
