--- a/lr-wsclient.html
+++ b/lr-wsclient.html
@@ -5,7 +5,7 @@
 <body>
     <script type="text/javascript">
         var sock = null;
-        var wsuri = "ws://xxx.xxx.xxx.xxx:1234";
+        var wsuri = "ws://xxx.xxx.xxx.xxx:1234"; // update to lr-wsserver.go ip
 
         window.onload = function() {
 
